--- a/PCA/PCA/Content/Layout.css
+++ b/PCA/PCA/Content/Layout.css
@@ -60,10 +60,11 @@ body {
     padding-bottom: 8px;
     padding-left: 0px;
     padding-right: 0px;
-    background-color: #eee;
-    color: #555;
+    /*background-color: #0a2143;*/
+    background-color: #223;
+    color: #eee;
     font-size: 0.8em;
-    font-weight: 600;
+    font-weight: 500;
     height: 40px;
     padding-top: 10px;
     font-family: Arial;
